@@ -334,3 +334,34 @@ class Test(BaseTest):
         assert "res" not in o
         assert o["method"] == "GET"
         assert o["message"] == "Sent response: "
+
+    def test_integer_condition(self):
+        """
+        It should work to drop JSON event based on an integer
+        value by using a simple `equal` condition. See #2038.
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/*",
+            json=dict(
+                keys_under_root=True,
+                ),
+            processors=[{
+                "drop_event": {
+                    "when": "equals.status: 200",
+                },
+            }]
+        )
+        os.mkdir(self.working_dir + "/log/")
+        self.copy_files(["logs/json_int.log"],
+                        source_dir="../files",
+                        target_dir="log")
+
+        proc = self.start_beat()
+        self.wait_until(
+            lambda: self.output_has(lines=1),
+            max_timeout=10)
+        proc.check_kill_and_wait()
+
+        output = self.read_output()
+        assert len(output) == 1
+        assert output[0]["status"] == 404
